package sparta.clack.cipher;

public enum CipherEnum {
    CAESAR,
    VIGNERE;
}
